--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <webjars-bootstrap.version>4.1.3</webjars-bootstrap.version>
     <webjars-jquery-ui.version>1.12.1</webjars-jquery-ui.version>
     <webjars-jquery.version>3.3.1-1</webjars-jquery.version>
+    <dropwizard.version>2.1.0-SNAPSHOT</dropwizard.version>
   </properties>
 
   <dependencies>
@@ -80,6 +81,16 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
       <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>io.dropwizard</groupId>
+      <artifactId>dropwizard-core</artifactId>
+      <version>${dropwizard.version}</version>
     </dependency>
   </dependencies>
 
