--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
 
     <properties>
         <mainClass>test.SampleApplication</mainClass>
-        <jerseyVer>2.25.1</jerseyVer>
     </properties>
 
     <dependencyManagement>
@@ -48,33 +47,11 @@
             <artifactId>asm-debug-all</artifactId>
         </dependency>
 
-
         <!-- Test Components -->
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-testing</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.glassfish.jersey.containers</groupId>
-            <artifactId>jersey-container-servlet</artifactId>
-            <version>${jerseyVer}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.ext</groupId>
-            <artifactId>jersey-mvc</artifactId>
-            <version>${jerseyVer}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.ext</groupId>
-            <artifactId>jersey-mvc-jsp</artifactId>
-            <version>${jerseyVer}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-multipart</artifactId>
-            <version>2.32</version>
         </dependency>
     </dependencies>
 
@@ -87,6 +64,10 @@
             </resource>
             <resource>
                 <directory>${project.basedir}</directory>
+                <includes>
+                    <include>NOTICE</include>
+                    <include>license_third-party/**</include>
+                </includes>
                 <targetPath>${project.build.directory}/classes/META-INF</targetPath>
             </resource>
         </resources>
@@ -283,3 +264,4 @@
         </plugins>
     </reporting>
 </project>
+
