--- a/pom.xml
+++ b/pom.xml
@@ -1,272 +1,54 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>io.github.tfahub</groupId>
-        <artifactId>standard-parent</artifactId>
-        <version>1.0.1</version>
-    </parent>
-
-    <groupId>test</groupId>
-    <artifactId>sample-application</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <groupId>com.example</groupId>
+    <artifactId>MVC-PRUEBA</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <name>MVC-PRUEBA</name>
+    <packaging>war</packaging>
 
     <properties>
-        <mainClass>test.SampleApplication</mainClass>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <junit.version>5.6.2</junit.version>
     </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>io.github.tfahub</groupId>
-                <artifactId>dropwizard-bom</artifactId>
-                <version>1.0.0-2</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <dependencies>
-        <!-- Core Components -->
         <dependency>
-            <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-core</artifactId>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>8.0.1</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>aopalliance</groupId>
-            <artifactId>aopalliance</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.ow2.asm</groupId>
-            <artifactId>asm-debug-all</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jsp-api</artifactId>
-            <version>2.0</version>
-        </dependency>
-
-        <!-- Test Components -->
-        <dependency>
-            <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-testing</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.1</version>
         </dependency>
     </dependencies>
 
     <build>
-        <finalName>${project.artifactId}</finalName>
-
-        <resources>
-            <resource>
-                <directory>${project.basedir}/src/main/resources</directory>
-            </resource>
-            <resource>
-                <directory>${project.basedir}</directory>
-                <includes>
-                    <include>NOTICE</include>
-                    <include>license_third-party/**</include>
-                </includes>
-                <targetPath>${project.build.directory}/classes/META-INF</targetPath>
-            </resource>
-        </resources>
-
         <plugins>
             <plugin>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>enforce-versions</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-shade-plugin</artifactId>
-                <configuration>
-                    <artifactSet>
-                        <excludes>
-                            <exclude>org.glassfish.jersey.bundles.repackaged:jersey-guava</exclude>
-                        </excludes>
-                    </artifactSet>
-                    <filters>
-                        <filter>
-                            <artifact>com.fasterxml:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/LICENSE</exclude>
-                                <exclude>META-INF/NOTICE</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>com.fasterxml.jackson.core:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/LICENSE</exclude>
-                                <exclude>META-INF/NOTICE</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>com.fasterxml.jackson.dataformat:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/LICENSE</exclude>
-                                <exclude>META-INF/NOTICE</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>com.fasterxml.jackson.dataformat:jackson-dataformat-yaml</artifact>
-                            <excludes>
-                                <exclude>com/fasterxml/jackson/dataformat/yaml/snakeyaml/**</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>com.fasterxml.jackson.datatype:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/LICENSE</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>com.fasterxml.jackson.jaxrs:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/LICENSE</exclude>
-                                <exclude>META-INF/NOTICE</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>com.fasterxml.jackson.module:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/LICENSE</exclude>
-                                <exclude>META-INF/NOTICE</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>com.fasterxml.jackson.module:jackson-module-afterburner</artifact>
-                            <excludes>
-                                <exclude>com/fasterxml/jackson/module/afterburner/asm/**</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>javax.annotation:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/LICENSE.txt</exclude>
-                                <exclude>**/package.html</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>javax.servlet:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/LICENSE.txt</exclude>
-                                <exclude>**/package.html</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>joda-time:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/LICENSE.txt</exclude>
-                                <exclude>META-INF/NOTICE.txt</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>org.apache.commons:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/LICENSE.txt</exclude>
-                                <exclude>META-INF/NOTICE.txt</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>org.eclipse.jetty:*</artifact>
-                            <excludes>
-                                <exclude>about.html</exclude>
-                                <exclude>jetty-dir.css</exclude>
-                                <exclude>org/eclipse/jetty/favicon.ico</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>org.glassfish:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/LICENSE.txt</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>org.glassfish.jersey.core:jersey-server</artifact>
-                            <excludes>
-                                <exclude>jersey/repackaged/org/objectweb/asm/**</exclude>
-                            </excludes>
-                        </filter>
-                        <filter>
-                            <artifact>org.jboss.logging:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/LICENSE.txt</exclude>
-                            </excludes>
-                        </filter>
-                    </filters>
-                    <relocations>
-                        <relocation>
-                            <pattern>com.fasterxml.jackson.dataformat.yaml.snakeyaml</pattern>
-                            <shadedPattern>org.yaml.snakeyaml</shadedPattern>
-                        </relocation>
-                        <relocation>
-                            <pattern>com.fasterxml.jackson.module.afterburner.asm</pattern>
-                            <shadedPattern>org.objectweb.asm</shadedPattern>
-                        </relocation>
-                        <relocation>
-                            <pattern>jersey.repackaged.com.google.common</pattern>
-                            <shadedPattern>com.google.common</shadedPattern>
-                        </relocation>
-                        <relocation>
-                            <pattern>jersey.repackaged.org.objectweb.asm</pattern>
-                            <shadedPattern>org.objectweb.asm</shadedPattern>
-                        </relocation>
-                    </relocations>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.0</version>
             </plugin>
         </plugins>
     </build>
-
-    <reporting>
-        <plugins>
-            <plugin>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>${maven-project-info-reports-plugin.version}</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven-javadoc-plugin.version}</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>${maven-surefire-report-plugin.version}</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-jxr-plugin</artifactId>
-                <version>${maven-jxr-plugin.version}</version>
-            </plugin>
-        </plugins>
-    </reporting>
 </project>
-
