--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5"
-         xmlns="http://java.sun.com/xml/ns/javaee"
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-	http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
+
     <servlet>
         <servlet-name>SERVLOGIN</servlet-name>
         <servlet-class>servlets.SERVLOGIN</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>SERVLOGIN</servlet-name>
         <url-pattern>/SERVLOGIN</url-pattern>
     </servlet-mapping>
+
+
+    <welcome-file-list>
+        <welcome-file>/webapp/index.html</welcome-file>
+    </welcome-file-list>
 
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
-
 </web-app>
