--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,16 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-client</artifactId>
+            <version>2.1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-jetty</artifactId>
+            <version>2.1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
