--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,12 @@
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-client</artifactId>
-            <version>2.1.0-SNAPSHOT</version>
+            <version>2.0.15</version>
         </dependency>
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-jetty</artifactId>
-            <version>2.1.0-SNAPSHOT</version>
+            <version>2.0.15</version>
         </dependency>
     </dependencies>
 
